--- a/stylePractice.css
+++ b/stylePractice.css
@@ -51,10 +51,15 @@
     font-size: 40px;
 }
 
+.visible{
+    width: 100px;
+    height: 50px;
+}
+
 .barProses{
     height: 50px;
     width: 0;
-    background: yellow;
+    background: green;
     border: 1px solid black;
 }
 
