--- a/gameStyle.css
+++ b/gameStyle.css
@@ -2,11 +2,11 @@
     height: 20px;
     border: 1px solid lightblue;
     background: greenyellow;
-    border-radius: 50px;
+    border-radius: 0.5em;
 }
 .bcg{
     background: lightgrey;
-    border-radius: 50px;
+    border-radius: 0.5em;
     height: 20px;
     width: 200px;
 }
@@ -39,6 +39,13 @@
     text-align: center;
 }
 
+
+.notice{
+    margin-top: 50px;
+    border: 1px solid lightgrey;
+    border-radius: 30px;
+}
+
 .warpButton{
     height: 100px;
     margin-top: 50px;
@@ -53,6 +60,7 @@
     border-radius: 0.5em;
 }
 
+.specialAttackActive,
 .heal,
 .giveUp,
 .specialAttack,
@@ -75,4 +83,20 @@
 }
 .specialAttack{
     background: darkmagenta;
+}
+.specialAttackActive{
+    background: palevioletred;
+    color: darkblue;
+    box-shadow: aqua;
+}
+
+.noticeHero{
+    background: green;
+    color: whitesmoke;
+}
+.noticeMontser{
+    background: red;
+}
+.aaa{
+    display: none;
 }
